# btc-alpha-pipeline

./: .env.example  .gitignore  CLAUDE.md  PHASE0_BLUEPRINT.md  PHASE1_SIGNOFF.md  PHASE2_BLUEPRINT.md  README.md  data_dictionary.md  environments.yaml  phase0 pipeline test.ipynb  phase1A deliverable test.ipynb  pyproject.toml  schemas.yaml
Blueprint/: PHASE1_BLUEPRINT.md
agents/: hypothesis_hash.py  themes.py
backtest/: bt_parquet_feed.py  engine.py  evaluate_dsr.py  execution_model.py  experiment_registry.py  metrics.py  slippage.py  trade_audit.py  wf_lineage.py
blueprint/: PHASE2_BLUEPRINT.md
closeout/: PHASE1A_SIGNOFF.md
config/: environments.yaml  execution.yaml  schemas.yaml
factors/: build_features.py  momentum.py  moving_averages.py  price.py  registry.py  returns.py  structural.py  volatility.py  volume.py
ingestion/: bulk_download.py  incremental_update.py  reconcile.py  validators.py
scripts/: build_d7_stage2d_baselines.py  build_d7_stage2d_deep_dive.py  build_d7_stage2d_replay_candidates.py  compare_2022_vs_2024.py  compare_multi_regime.py  derive_d7_stage2d_label_universes.py  filter_evaluation_gate.py  run_d7_stage2a_dryrun.py  run_d7_stage2a_live.py  run_d7_stage2b_batch.py  run_d7_stage2c_batch.py  run_d7_stage2d_batch.py  run_phase1b_corrected.py  run_phase2c_batch_walkforward.py  run_phase2c_evaluation_gate.py  select_replay_candidate.py  stage2d_self_check.py
strategies/: TECHNIQUE_BACKLOG.md  dsl.py  dsl_compiler.py  template.py
test notebooks/: phase0 pipeline test.ipynb  phase1B deliverable test.ipynb  phase2A deliverable test.ipynb  phase2AB deliverable test.ipynb  phase2B deliverable test.ipynb
tests/: test_additional_baselines.py  test_dsl.py  (+56 more)
(+2501 files in other folders)
