[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-alpha-pipeline"
version = "0.1.0"
description = "BTC quantitative research and trading pipeline"
requires-python = ">=3.11"

dependencies = [
    # === Phase 0: Data Infrastructure ===
    "pandas~=2.2.0",
    "numpy~=1.26.0",
    "pyarrow~=15.0.0",        # Parquet read/write
    "ccxt~=4.0.0",             # Exchange API (incremental updates)
    "requests~=2.31.0",        # HTTP for Binance Vision downloads
    "pyyaml~=6.0",             # Config file parsing

    # === Phase 1: Backtesting ===
    # "backtrader~=1.9.78",    # Uncomment when entering Phase 1
    # "matplotlib~=3.8.0",     # Backtrader plotting
    # "scipy~=1.12.0",         # Statistical tests

    # === Phase 2: AI Agents ===
    # "anthropic~=0.40.0",     # Claude API
    # "vectorbt~=0.26.0",      # Quick factor scanning

    # === Phase 4: Paper/Live Trading ===
    # "websockets~=12.0",      # Live data feeds
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",            # Linting + formatting
    "ipython>=8.0.0",         # Interactive exploration
]

phase1 = [
    "backtrader>=1.9.78",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
]

phase2 = [
    "anthropic>=0.40.0",
    "vectorbt>=0.26.0",
    "pydantic~=2.0",           # DSL schema validation (D2)
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
